--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
         "react-router-dom": "^5.2.0"
     }
 }
